test/types/records/split-init/error-never-initialized-values-not-mentioned4.chpl
class C { }

proc error() {
  // These are just never mentioned again
  var q1: C?;
}
error();
